--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "splitprint",
   "version": "0.2.0",
-  "homepage": "https://siddharthsaini.com/splitprint",
+  "homepage": "https://siddharthsaini.github.io/splitprint",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
